@@ -1,3 +1,10 @@
+Fri Jun 11  8:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* NSScroller.m: Fixed bug in recognising page-scrolls - now sets the
+	NSINcrementPage and NSDecrementPage correctly.
+	* NSScxrollView.m: Fixed bug in scrolling by page - now uses the
+	page size as the context to retain, as it should.
+
 Thu Jun 10 22:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/NSView.m: Optimise display routines - avoid unneeded
